tests/src/frontend/typechecking/invalid/late_static5.sk
base class Foo final {x: Int} {
  static fun construct(): this {
    static{x => 42}
  }
}
